--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@openzeppelin/test-helpers": "^0.5.6",
     "ethereum-waffle": "^2.5.1",
     "prettier": "^1.19.1",
-    "prettier-plugin-solidity": "^1.0.0-alpha.38",
+    "prettier-plugin-solidity": "^1.0.0-beta.1",
     "solium": "^1.2.5"
   }
 }
